--- a/de/compression/b1.de.md
+++ b/de/compression/b1.de.md
@@ -26,27 +26,28 @@ Das B1-Dateiformat ist ein offenes Archivformat, das die besten bewährten Lösu
 
 B1 Free Archiver unterstützt die folgenden Dateiformate.
 
-*b1
+* b1
 * [zip](/de/compression/zip/)
-* [jar](/de/programmierung/jar/)
-*xpi
+* [jar](/de/programming/jar/)
+* xpi
 * [rar](/de/compression/rar/)
 * [7z](/de/compression/7z/)
 * [arj](/de/compression/arj/)
 * [bz2](/de/compression/bz2/)
-* Taxi
+* taxi
 * [deb](/de/compression/deb/)
 * [gzip](/de/compression/gzip/)
 * [tgz](/de/compression/tgz/)
-* Iso
+*iso
 * [lzh](/de/compression/lzh/)
-* ha
+* lha
 * [lzma](/de/compression/lzma/)
-* [U/min](/de/Kompression/U/min/)
+* [tr/min](/de/compression/tr/min/)
 * [tar](/de/compression/tar/)
 * [xar](/de/compression/xar/)
 * [z](/de/compression/z/)
-* [dmg](/de/compression/dmg/) und andere.
+* [dmg](/de/compression/dmg/)
+
 
 B1-Dateien können passwortgeschützt sein und werden standardmäßig mit der LZMA-Komprimierung (Lempel-Ziv-Markov-Kettenalgorithmus) komprimiert.
 
