--- a/el/compression/b1.el.md
+++ b/el/compression/b1.el.md
@@ -27,25 +27,25 @@
 Το B1 Free Archiver υποστηρίζει τις ακόλουθες μορφές αρχείων.
 
 * β1
-* [zip](/el/συμπίεση/zip/)
-* [βάζο](/el/προγραμματισμός/βάζο/)
+* [zip](/el/compression/zip/)
+* [jar](/el/programming/jar/)
 * xpi
-* [rar](/el/συμπίεση/rar/)
-* [7z](/el/συμπίεση/7z/)
-* [arj](/el/συμπίεση/arj/)
-* [bz2](/el/συμπίεση/bz2/)
+* [rar](/el/compression/rar/)
+* [7z](/el/compression/7z/)
+* [arj](/el/compression/arj/)
+* [bz2](/el/compression/bz2/)
 * ταξί
-* [deb](/el/συμπίεση/deb/)
-* [gzip](/el/συμπίεση/gzip/)
-* [tgz](/el/συμπίεση/tgz/)
+* [deb](/el/compression/deb/)
+* [gzip](/el/compression/gzip/)
+* [tgz](/el/compression/tgz/)
 * iso
-* [lzh](/el/συμπίεση/lzh/)
+* [lzh](/el/compression/lzh/)
 * λχα
-* [lzma](/el/συμπίεση/lzma/)
-* [σ.α.λ.](/el/συμπίεση/σ.α.λ./)
-* [πίσσα](/el/συμπίεση/πίσσα/)
-* [xar](/el/συμπίεση/xar/)
-* [z](/el/συμπίεση/z/)
+* [lzma](/el/compression/lzma/)
+* [σ.α.λ.](/el/compression/σ.α.λ./)
+* [πίσσα](/el/compression/πίσσα/)
+* [xar](/el/compression/xar/)
+* [z](/el/compression/z/)
 * [dmg](/el/compression/dmg/) και άλλα.
 
 Τα αρχεία B1 μπορούν να προστατεύονται με κωδικό πρόσβασης και συμπιέζονται χρησιμοποιώντας συμπίεση LZMA (Lempel-Ziv-Markov chain Algorithm) από προεπιλογή.
