--- a/es/compression/b1.es.md
+++ b/es/compression/b1.es.md
@@ -27,25 +27,25 @@ El formato de archivo B1 es un formato de archivo abierto que combina las mejore
 B1 Free Archiver admite los siguientes formatos de archivo.
 
 * b1
-* [zip](/es/compresión/zip/)
-* [jar](/es/programación/jar/)
+* [zip](/es/compression/zip/)
+* [jar](/es/programming/jar/)
 * xpi
-* [rar](/es/compresión/rar/)
-* [7z](/es/compresión/7z/)
-* [arj](/es/compresión/arj/)
-* [bz2](/es/compresión/bz2/)
+* [rar](/es/compression/rar/)
+* [7z](/es/compression/7z/)
+* [arj](/es/compression/arj/)
+* [bz2](/es/compression/bz2/)
 * taxi
-* [deb](/es/compresión/deb/)
-* [gzip](/es/compresión/gzip/)
-* [tgz](/es/compresión/tgz/)
+* [deb](/es/compression/deb/)
+* [gzip](/es/compression/gzip/)
+* [tgz](/es/compression/tgz/)
 * Yo asi
-* [lzh](/es/compresión/lzh/)
+* [lzh](/es/compression/lzh/)
 * jaja
-* [lzma](/es/compresión/lzma/)
-* [rpm](/es/compresión/rpm/)
-* [alquitrán](/es/compresión/alquitrán/)
-* [xar](/es/compresión/xar/)
-* [z](/es/compresión/z/)
+* [lzma](/es/compression/lzma/)
+* [rpm](/es/compression/rpm/)
+* [alquitrán](/es/compression/alquitrán/)
+* [xar](/es/compression/xar/)
+* [z](/es/compression/z/)
 * [dmg](/es/compression/dmg/) y otros.
 
 Los archivos B1 se pueden proteger con contraseña y se comprimen mediante la compresión LZMA (algoritmo de cadena Lempel-Ziv-Markov) de forma predeterminada.
