--- a/fr/compression/b1.fr.md
+++ b/fr/compression/b1.fr.md
@@ -28,7 +28,7 @@ B1 Free Archiver prend en charge les formats de fichiers suivants.
 
 * b1
 * [zip](/fr/compression/zip/)
-* [jar](/fr/programmation/jar/)
+* [jar](/fr/programming/jar/)
 * xpi
 * [rar](/fr/compression/rar/)
 * [7z](/fr/compression/7z/)
