--- a/id/compression/b1.id.md
+++ b/id/compression/b1.id.md
@@ -27,25 +27,25 @@ Format file B1 adalah format arsip terbuka yang menggabungkan solusi terbaik yan
 B1 Free Archiver mendukung format file berikut.
 
 * b1
-* [zip](/id/kompresi/zip/)
-* [jar](/id/pemrograman/jar/)
+* [zip](/id/compression/zip/)
+* [jar](/id/programming/jar/)
 * xpi
-* [rar](/id/kompresi/rar/)
-* [7z](/id/kompresi/7z/)
-* [arj](/id/kompresi/arj/)
-* [bz2](/id/kompresi/bz2/)
-* taksi
-* [deb](/id/kompresi/deb/)
-* [gzip](/id/kompresi/gzip/)
-* [tgz](/id/kompresi/tgz/)
-* iso
-* [lzh](/id/kompresi/lzh/)
+* [rar](/id/compression/rar/)
+* [7z](/id/compression/7z/)
+* [arj](/id/compression/arj/)
+* [bz2](/id/compression/bz2/)
+* taxi
+* [deb](/id/compression/deb/)
+* [gzip](/id/compression/gzip/)
+* [tgz](/id/compression/tgz/)
+*iso
+* [lzh](/id/compression/lzh/)
 * lha
-* [lzma](/id/kompresi/lzma/)
-* [rpm](/id/kompresi/rpm/)
-* [tar](/id/kompresi/tar/)
-* [xar](/id/kompresi/xar/)
-* [z](/id/kompresi/z/)
+* [lzma](/id/compression/lzma/)
+* [tr/min](/id/compression/tr/min/)
+* [tar](/id/compression/tar/)
+* [xar](/id/compression/xar/)
+* [z](/id/compression/z/)
 * [dmg](/id/compression/dmg/) dan lainnya.
 
 File B1 dapat dilindungi kata sandi dan dikompresi menggunakan kompresi LZMA (Lempel-Ziv-Markov chain Algorithm) secara default.
