--- a/it/compression/b1.it.md
+++ b/it/compression/b1.it.md
@@ -27,25 +27,25 @@ Il formato di file B1 è un formato di archivio aperto che combina le migliori s
 B1 Free Archiver supporta i seguenti formati di file.
 
 * b1
-* [zip](/it/compressione/zip/)
-* [jar](/it/programmazione/jar/)
+* [zip](/it/compression/zip/)
+* [jar](/it/programming/jar/)
 * xpi
-* [rar](/it/compressione/rar/)
-* [7z](/it/compressione/7z/)
-* [arj](/it/compressione/arj/)
-* [bz2](/it/compressione/bz2/)
+* [rar](/it/compression/rar/)
+* [7z](/it/compression/7z/)
+* [arj](/it/compression/arj/)
+* [bz2](/it/compression/bz2/)
 * taxi
-* [deb](/it/compressione/deb/)
-* [gzip](/it/compressione/gzip/)
-* [tgz](/it/compressione/tgz/)
-* iso
-* [lzh](/it/compressione/lzh/)
+* [deb](/it/compression/deb/)
+* [gzip](/it/compression/gzip/)
+* [tgz](/it/compression/tgz/)
+*iso
+* [lzh](/it/compression/lzh/)
 * lha
-* [lzma](/it/compressione/lzma/)
-* [rpm](/it/compressione/rpm/)
-* [tar](/it/compressione/tar/)
-* [xar](/it/compressione/xar/)
-* [z](/it/compressione/z/)
+* [lzma](/it/compression/lzma/)
+* [tr/min](/it/compression/tr/min/)
+* [tar](/it/compression/tar/)
+* [xar](/it/compression/xar/)
+* [z](/it/compression/z/)
 * [dmg](/it/compression/dmg/) e altri.
 
 I file B1 possono essere protetti da password e vengono compressi utilizzando la compressione LZMA (Algoritmo della catena Lempel-Ziv-Markov) per impostazione predefinita.
