--- a/ko/compression/b1.ko.md
+++ b/ko/compression/b1.ko.md
@@ -27,25 +27,25 @@ B1 파일 형식은 파일 압축에 대해 검증된 최고의 솔루션을 결
 B1 Free Archiver는 다음 파일 형식을 지원합니다.
 
 * b1
-* [zip](/ko/압축/zip/)
-* [jar](/ko/프로그래밍/jar/)
+* [zip](/ko/compression/zip/)
+* [jar](/ko/programming/jar/)
 * xpi
-* [rar](/ko/압축/rar/)
-* [7z](/ko/압축/7z/)
-* [arj](/ko/압축/arj/)
-* [bz2](/ko/압축/bz2/)
-* 택시
-* [deb](/ko/압축/deb/)
-* [gzip](/ko/압축/gzip/)
-* [tgz](/ko/압축/tgz/)
-* 이소
-* [lzh](/ko/압축/lzh/)
-* 하
-* [lzma](/ko/압축/lzma/)
-* [rpm](/ko/압축/rpm/)
-* [tar](/ko/압축/tar/)
-* [xar](/ko/압축/xar/)
-* [z](/ko/압축/z/)
+* [rar](/ko/compression/rar/)
+* [7z](/ko/compression/7z/)
+* [arj](/ko/compression/arj/)
+* [bz2](/ko/compression/bz2/)
+* taxi
+* [deb](/ko/compression/deb/)
+* [gzip](/ko/compression/gzip/)
+* [tgz](/ko/compression/tgz/)
+*iso
+* [lzh](/ko/compression/lzh/)
+* lha
+* [lzma](/ko/compression/lzma/)
+* [tr/min](/ko/compression/tr/min/)
+* [tar](/ko/compression/tar/)
+* [xar](/ko/compression/xar/)
+* [z](/ko/compression/z/)
 * [dmg](/ko/compression/dmg/) 및 기타.
 
 B1 파일은 암호로 보호할 수 있으며 기본적으로 LZMA(Lempel-Ziv-Markov chain Algorithm) 압축을 사용하여 압축됩니다.
