--- a/pl/compression/b1.pl.md
+++ b/pl/compression/b1.pl.md
@@ -27,26 +27,26 @@ Format pliku B1 to otwarty format archiwum, który łączy w sobie najlepsze spr
 B1 Free Archiver obsługuje następujące formaty plików.
 
 * b1
-* [zip](/pl/kompresja/zip/)
-* [słoik](/pl/programowanie/słoik/)
+* [zip](/pl/compression/zip/)
+* [jar](/pl/programming/jar/)
 * xpi
-* [rar](/pl/kompresja/rar/)
-* [7z](/pl/kompresja/7z/)
-* [arj](/pl/kompresja/arj/)
-* [bz2](/pl/kompresja/bz2/)
-* taksówka
-* [deb](/pl/kompresja/deb/)
-* [gzip](/pl/kompresja/gzip/)
-* [tgz](/pl/kompresja/tgz/)
-* izo
-* [lzh](/pl/kompresja/lzh/)
-* laha
-* [lzma](/pl/kompresja/lzma/)
-* [rpm](/pl/kompresja/rpm/)
-* [tar](/pl/kompresja/tar/)
-* [xar](/pl/kompresja/xar/)
-* [z](/pl/kompresja/z/)
-* [dmg](/pl/kompresja/dmg/) i inne.
+* [rar](/pl/compression/rar/)
+* [7z](/pl/compression/7z/)
+* [arj](/pl/compression/arj/)
+* [bz2](/pl/compression/bz2/)
+* taxi
+* [deb](/pl/compression/deb/)
+* [gzip](/pl/compression/gzip/)
+* [tgz](/pl/compression/tgz/)
+*iso
+* [lzh](/pl/compression/lzh/)
+* lha
+* [lzma](/pl/compression/lzma/)
+* [tr/min](/pl/compression/tr/min/)
+* [tar](/pl/compression/tar/)
+* [xar](/pl/compression/xar/)
+* [z](/pl/compression/z/)
+* [dmg](/pl/compression/dmg/) i inne.
 
 Pliki B1 mogą być chronione hasłem i są domyślnie kompresowane przy użyciu kompresji LZMA (Lempel-Ziv-Markov chain Algorithm).
 
