--- a/pt/compression/b1.pt.md
+++ b/pt/compression/b1.pt.md
@@ -27,25 +27,25 @@ O formato de arquivo B1 é um formato de arquivo aberto que combina as melhores 
 B1 Free Archiver suporta os seguintes formatos de arquivo.
 
 * b1
-* [zip](/pt/compressão/zip/)
-* [jar](/pt/programação/jar/)
+* [zip](/pt/compression/zip/)
+* [jar](/pt/programming/jar/)
 * xpi
-* [rar](/pt/compressão/rar/)
-* [7z](/pt/compressão/7z/)
+* [rar](/pt/compression/rar/)
+* [7z](/pt/compression/7z/)
 * [arj](/pt/compression/arj/)
-* [bz2](/pt/compressão/bz2/)
-* táxi
-* [deb](/pt/compressão/deb/)
+* [bz2](/pt/compression/bz2/)
+* taxi
+* [deb](/pt/compression/deb/)
 * [gzip](/pt/compression/gzip/)
-* [tgz](/pt/compressão/tgz/)
-* iso
+* [tgz](/pt/compression/tgz/)
+*iso
 * [lzh](/pt/compression/lzh/)
 * lha
 * [lzma](/pt/compression/lzma/)
-* [rpm](/pt/compressão/rpm/)
+* [tr/min](/pt/compression/tr/min/)
 * [tar](/pt/compression/tar/)
-* [xar](/pt/compressão/xar/)
-* [z](/pt/compressão/z/)
+* [xar](/pt/compression/xar/)
+* [z](/pt/compression/z/)
 * [dmg](/pt/compression/dmg/) e outros.
 
 Os arquivos B1 podem ser protegidos por senha e são compactados usando a compactação LZMA (Lempel-Ziv-Markov chain Algorithm) por padrão.
