--- a/ro/compression/b1.ro.md
+++ b/ro/compression/b1.ro.md
@@ -28,24 +28,24 @@ B1 Free Archiver acceptă următoarele formate de fișiere.
 
 * b1
 * [zip](/ro/compression/zip/)
-* [jar](/ro/programare/jar/)
+* [jar](/ro/programming/jar/)
 * xpi
 * [rar](/ro/compression/rar/)
-* [7z](/ro/compresie/7z/)
-* [arj](/ro/compresie/arj/)
+* [7z](/ro/compression/7z/)
+* [arj](/ro/compression/arj/)
 * [bz2](/ro/compression/bz2/)
 * taxi
-* [deb](/ro/compresie/deb/)
+* [deb](/ro/compression/deb/)
 * [gzip](/ro/compression/gzip/)
 * [tgz](/ro/compression/tgz/)
-* izo
-* [lzh](/ro/compresie/lzh/)
+*iso
+* [lzh](/ro/compression/lzh/)
 * lha
 * [lzma](/ro/compression/lzma/)
-* [rpm](/ro/compresie/rpm/)
-* [tar](/ro/compresie/gudron/)
+* [tr/min](/ro/compression/tr/min/)
+* [tar](/ro/compression/tar/)
 * [xar](/ro/compression/xar/)
-* [z](/ro/compresie/z/)
+* [z](/ro/compression/z/)
 * [dmg](/ro/compression/dmg/) și altele.
 
 Fișierele B1 pot fi protejate cu parolă și sunt comprimate folosind compresia LZMA (Algoritmul de lanț Lempel-Ziv-Markov) în mod implicit.
