--- a/sv/compression/b1.sv.md
+++ b/sv/compression/b1.sv.md
@@ -26,26 +26,26 @@ B1 filformat är ett öppet arkivformat som kombinerar de bästa beprövade lös
 
 B1 Free Archiver stöder följande filformat.
 
-*b1
+* b1
 * [zip](/sv/compression/zip/)
-* [jar](/sv/programmering/jar/)
+* [jar](/sv/programming/jar/)
 * xpi
 * [rar](/sv/compression/rar/)
-* [7z](/sv/komprimering/7z/)
+* [7z](/sv/compression/7z/)
 * [arj](/sv/compression/arj/)
 * [bz2](/sv/compression/bz2/)
-* cab
+* taxi
 * [deb](/sv/compression/deb/)
 * [gzip](/sv/compression/gzip/)
 * [tgz](/sv/compression/tgz/)
 *iso
 * [lzh](/sv/compression/lzh/)
-*lha
+* lha
 * [lzma](/sv/compression/lzma/)
-* [rpm](/sv/komprimering/rpm/)
+* [tr/min](/sv/compression/tr/min/)
 * [tar](/sv/compression/tar/)
-* [xar](/sv/kompression/xar/)
-* [z](/sv/komprimering/z/)
+* [xar](/sv/compression/xar/)
+* [z](/sv/compression/z/)
 * [dmg](/sv/compression/dmg/) och andra.
 
 B1-filer kan lösenordsskyddas och komprimeras med LZMA (Lempel-Ziv-Markov chain Algorithm)-komprimering som standard.
