--- a/th/compression/b1.th.md
+++ b/th/compression/b1.th.md
@@ -26,27 +26,27 @@
 
 B1 Free Archiver รองรับรูปแบบไฟล์ต่อไปนี้
 
-* ข1
-* [zip](/th/บีบอัด/zip/)
-* [jar](/th/การเขียนโปรแกรม/jar/)
+* b1
+* [zip](/th/compression/zip/)
+* [jar](/th/programming/jar/)
 * xpi
-* [rar](/th/บีบอัด/rar/)
-* [7z](/th/บีบอัด/7z/)
-* [arj](/th/บีบอัด/arj/)
-* [bz2](/th/บีบอัด/bz2/)
-* แท็กซี่
-* [deb](/th/บีบอัด/deb/)
-* [gzip](/th/บีบอัด/gzip/)
-* [tgz](/th/บีบอัด/tgz/)
-* ไอโซ
-* [lzh](/th/บีบอัด/lzh/)
-* ฮะ
-* [lzma](/th/บีบอัด/lzma/)
-* [รอบต่อนาที](/th/การบีบอัด/รอบต่อนาที/)
-* [น้ำมันดิน](/th/บีบอัด/น้ำมันดิน/)
-* [xar](/th/บีบอัด/xar/)
-* [z](/th/บีบอัด/z/)
-* [dmg](/th/การบีบอัด/dmg/) และอื่นๆ
+* [rar](/th/compression/rar/)
+* [7z](/th/compression/7z/)
+* [arj](/th/compression/arj/)
+* [bz2](/th/compression/bz2/)
+* taxi
+* [deb](/th/compression/deb/)
+* [gzip](/th/compression/gzip/)
+* [tgz](/th/compression/tgz/)
+*iso
+* [lzh](/th/compression/lzh/)
+* lha
+* [lzma](/th/compression/lzma/)
+* [tr/min](/th/compression/tr/min/)
+* [tar](/th/compression/tar/)
+* [xar](/th/compression/xar/)
+* [z](/th/compression/z/)
+* [dmg](/th/compression/dmg/) และอื่นๆ
 
 ไฟล์ B1 สามารถป้องกันด้วยรหัสผ่านและบีบอัดโดยใช้การบีบอัด LZMA (Lempel-Ziv-Markov chain Algorithm) ตามค่าเริ่มต้น
 
