--- a/tr/compression/b1.tr.md
+++ b/tr/compression/b1.tr.md
@@ -27,25 +27,25 @@ B1 dosya formatı, dosyaların sıkıştırılması için kanıtlanmış en iyi 
 B1 Ücretsiz Arşivleyici aşağıdaki dosya biçimlerini destekler.
 
 * b1
-* [zip](/tr/sıkıştırma/zip/)
-* [jar](/tr/programlama/jar/)
-* deneyim
-* [rar](/tr/sıkıştırma/rar/)
-* [7z](/tr/sıkıştırma/7z/)
-* [arj](/tr/sıkıştırma/arj/)
-* [bz2](/tr/sıkıştırma/bz2/)
-* taksi
-* [deb](/tr/sıkıştırma/deb/)
-* [gzip](/tr/sıkıştırma/gzip/)
-* [tgz](/tr/sıkıştırma/tgz/)
-* iso
+* [zip](/tr/compression/zip/)
+* [jar](/tr/programming/jar/)
+* xpi
+* [rar](/tr/compression/rar/)
+* [7z](/tr/compression/7z/)
+* [arj](/tr/compression/arj/)
+* [bz2](/tr/compression/bz2/)
+* taxi
+* [deb](/tr/compression/deb/)
+* [gzip](/tr/compression/gzip/)
+* [tgz](/tr/compression/tgz/)
+*iso
 * [lzh](/tr/compression/lzh/)
 * lha
-* [lzma](/tr/sıkıştırma/lzma/)
-* [rpm](/tr/sıkıştırma/rpm/)
-* [tar](/tr/sıkıştırma/tar/)
-* [xar](/tr/sıkıştırma/xar/)
-* [z](/tr/sıkıştırma/z/)
+* [lzma](/tr/compression/lzma/)
+* [tr/min](/tr/compression/tr/min/)
+* [tar](/tr/compression/tar/)
+* [xar](/tr/compression/xar/)
+* [z](/tr/compression/z/)
 * [dmg](/tr/compression/dmg/) ve diğerleri.
 
 B1 dosyaları parola korumalı olabilir ve varsayılan olarak LZMA (Lempel-Ziv-Markov zincir Algoritması) sıkıştırması kullanılarak sıkıştırılır.
