--- a/hi/compression/b1.hi.md
+++ b/hi/compression/b1.hi.md
@@ -26,27 +26,28 @@ B1 फ़ाइल स्वरूप एक खुला संग्रह प
 
 B1 मुक्त संग्रहकर्ता निम्न फ़ाइल स्वरूपों का समर्थन करता है।
 
-* बी1
-* [ज़िप](/hi/ संपीड़न/ज़िप/)
-* [जार](/hi/ प्रोग्रामिंग/जार/)
+* b1
+* [zip](/hi/compression/zip/)
+* [jar](/hi/programming/jar/)
 * xpi
-* [rar](/hi/संपीड़न/rar/)
-* [7z](/hi/संपीड़न/7z/)
-* [अर्ज](/hi/ संपीड़न/arj/)
-* [bz2](/hi/संपीड़न/bz2/)
-* कैब
-* [बहस](/hi/ संपीड़न / बहस /)
-* [gzip](/hi/संपीड़न/gzip/)
-* [tgz](/hi/संपीड़न/tgz/)
-* आईएसओ
-* [lzh](/hi/ संपीड़न/lzh/)
-* ल्हा
-* [lzma](/hi/ संपीड़न/lzma/)
-* [आरपीएम](/hi/ संपीड़न/आरपीएम/)
-* [टार](/hi/ संपीड़न / टार /)
-* [xar](/hi/ संपीड़न/xar/)
-* [जेड](/hi/ संपीड़न / जेड /)
-* [dmg](/hi/compression/dmg/) और अन्य।
+* [rar](/hi/compression/rar/)
+* [7z](/hi/compression/7z/)
+* [arj](/hi/compression/arj/)
+* [bz2](/hi/compression/bz2/)
+* taxi
+* [deb](/hi/compression/deb/)
+* [gzip](/hi/compression/gzip/)
+* [tgz](/hi/compression/tgz/)
+*iso
+* [lzh](/hi/compression/lzh/)
+* lha
+* [lzma](/hi/compression/lzma/)
+* [tr/min](/hi/compression/tr/min/)
+* [tar](/hi/compression/tar/)
+* [xar](/hi/compression/xar/)
+* [z](/hi/compression/z/)
+* [dmg](/hi/compression/dmg/)
+
 
 B1 फ़ाइलों को पासवर्ड से सुरक्षित किया जा सकता है और डिफ़ॉल्ट रूप से LZMA (लेम्पेल-ज़िव-मार्कोव चेन एल्गोरिथम) संपीड़न का उपयोग करके संपीड़ित किया जाता है।
 
