--- a/bg/compression/b1.bg.md
+++ b/bg/compression/b1.bg.md
@@ -28,22 +28,22 @@ B1 Free Archiver поддържа следните файлови формати
 
 * b1
 * [zip](/bg/compression/zip/)
-* [буркан](/bg/programming/буркан/)
+* [jar](/bg/programming/jar/)
 * xpi
 * [rar](/bg/compression/rar/)
 * [7z](/bg/compression/7z/)
 * [arj](/bg/compression/arj/)
 * [bz2](/bg/compression/bz2/)
-* такси
+* taxi
 * [deb](/bg/compression/deb/)
 * [gzip](/bg/compression/gzip/)
 * [tgz](/bg/compression/tgz/)
-* изо
+*iso
 * [lzh](/bg/compression/lzh/)
-* лха
+* lha
 * [lzma](/bg/compression/lzma/)
-* [rpm](/bg/compression/rpm/)
-* [катран](/bg/compression/катран/)
+* [tr/min](/bg/compression/bg/min/)
+* [tar](/bg/compression/tar/)
 * [xar](/bg/compression/xar/)
 * [z](/bg/compression/z/)
 * [dmg](/bg/compression/dmg/) и други.
