--- a/hu/compression/b1.hu.md
+++ b/hu/compression/b1.hu.md
@@ -28,7 +28,7 @@ A B1 Free Archiver a következő fájlformátumokat támogatja.
 
 * b1
 * [zip](/hu/compression/zip/)
-* [jar](/hu/programozás/jar/)
+* [jar](/hu/programming/jar/)
 * xpi
 * [rar](/hu/compression/rar/)
 * [7z](/hu/compression/7z/)
@@ -36,16 +36,16 @@ A B1 Free Archiver a következő fájlformátumokat támogatja.
 * [bz2](/hu/compression/bz2/)
 * taxi
 * [deb](/hu/compression/deb/)
-* [gzip](/hu/tömörítés/gzip/)
-* [tgz](/hu/tömörítés/tgz/)
-* iso
+* [gzip](/hu/compression/gzip/)
+* [tgz](/hu/compression/tgz/)
+*iso
 * [lzh](/hu/compression/lzh/)
 * lha
 * [lzma](/hu/compression/lzma/)
-* [rpm](/hu/compression/rpm/)
-* [kátrány](/hu/tömörítés/kátrány/)
+* [tr/min](/hu/compression/hu/min/)
+* [tar](/hu/compression/tar/)
 * [xar](/hu/compression/xar/)
-* [z](/hu/tömörítés/z/)
+* [z](/hu/compression/z/)
 * [dmg](/hu/compression/dmg/) és mások.
 
 A B1 fájlok jelszóval védhetők, és alapértelmezés szerint LZMA (Lempel-Ziv-Markov chain Algorithm) tömörítéssel tömöríthetők.
