--- a/ar/compression/b1.ar.md
+++ b/ar/compression/b1.ar.md
@@ -28,7 +28,7 @@
 
 * b1
 * [zip](/ar/compression/zip/)
-* [jar](/programming/jar/)
+* [jar](/ar/programming/jar/)
 * xpi
 * [rar](/ar/compression/rar/)
 * [7z](/ar/compression/7z/)
