--- a/bg/compression/b1.bg.md
+++ b/bg/compression/b1.bg.md
@@ -34,15 +34,15 @@ B1 Free Archiver поддържа следните файлови формати
 * [7z](/bg/compression/7z/)
 * [arj](/bg/compression/arj/)
 * [bz2](/bg/compression/bz2/)
-* taxi
+* cab
 * [deb](/bg/compression/deb/)
 * [gzip](/bg/compression/gzip/)
 * [tgz](/bg/compression/tgz/)
-*iso
+* iso
 * [lzh](/bg/compression/lzh/)
 * lha
 * [lzma](/bg/compression/lzma/)
-* [tr/min](/bg/compression/bg/min/)
+* [rpm](/bg/compression/rpm/)
 * [tar](/bg/compression/tar/)
 * [xar](/bg/compression/xar/)
 * [z](/bg/compression/z/)
