--- a/cs/compression/b1.cs.md
+++ b/cs/compression/b1.cs.md
@@ -34,15 +34,15 @@ B1 Free Archiver podporuje následující formáty souborů.
 * [7z](/cs/compression/7z/)
 * [arj](/cs/compression/arj/)
 * [bz2](/cs/compression/bz2/)
-* kabina
+* cab
 * [deb](/cs/compression/deb/)
 * [gzip](/cs/compression/gzip/)
 * [tgz](/cs/compression/tgz/)
 * iso
 * [lzh](/cs/compression/lzh/)
-*lha
+* lha
 * [lzma](/cs/compression/lzma/)
-* [ot./min](/cs/compression/ot./min/)
+* [rpm](/cs/compression/rpm/)
 * [tar](/cs/compression/tar/)
 * [xar](/cs/compression/xar/)
 * [z](/cs/compression/z/)
