--- a/el/compression/b1.el.md
+++ b/el/compression/b1.el.md
@@ -26,7 +26,7 @@
 
 Το B1 Free Archiver υποστηρίζει τις ακόλουθες μορφές αρχείων.
 
-* β1
+* b1
 * [zip](/el/compression/zip/)
 * [jar](/el/programming/jar/)
 * xpi
@@ -34,16 +34,16 @@
 * [7z](/el/compression/7z/)
 * [arj](/el/compression/arj/)
 * [bz2](/el/compression/bz2/)
-* ταξί
+* cab
 * [deb](/el/compression/deb/)
 * [gzip](/el/compression/gzip/)
 * [tgz](/el/compression/tgz/)
 * iso
 * [lzh](/el/compression/lzh/)
-* λχα
+* lha
 * [lzma](/el/compression/lzma/)
-* [σ.α.λ.](/el/compression/σ.α.λ./)
-* [πίσσα](/el/compression/πίσσα/)
+* [rpm](/el/compression/rpm/)
+* [tar](/el/compression/tar/)
 * [xar](/el/compression/xar/)
 * [z](/el/compression/z/)
 * [dmg](/el/compression/dmg/) και άλλα.
