--- a/es/compression/b1.es.md
+++ b/es/compression/b1.es.md
@@ -34,16 +34,16 @@ B1 Free Archiver admite los siguientes formatos de archivo.
 * [7z](/es/compression/7z/)
 * [arj](/es/compression/arj/)
 * [bz2](/es/compression/bz2/)
-* taxi
+* cab
 * [deb](/es/compression/deb/)
 * [gzip](/es/compression/gzip/)
 * [tgz](/es/compression/tgz/)
-* Yo asi
+* iso
 * [lzh](/es/compression/lzh/)
-* jaja
+* lha
 * [lzma](/es/compression/lzma/)
 * [rpm](/es/compression/rpm/)
-* [alquitrán](/es/compression/alquitrán/)
+* [tar](/es/compression/tar/)
 * [xar](/es/compression/xar/)
 * [z](/es/compression/z/)
 * [dmg](/es/compression/dmg/) y otros.
