--- a/fr/compression/b1.fr.md
+++ b/fr/compression/b1.fr.md
@@ -34,15 +34,15 @@ B1 Free Archiver prend en charge les formats de fichiers suivants.
 * [7z](/fr/compression/7z/)
 * [arj](/fr/compression/arj/)
 * [bz2](/fr/compression/bz2/)
-* taxi
+* cab
 * [deb](/fr/compression/deb/)
 * [gzip](/fr/compression/gzip/)
 * [tgz](/fr/compression/tgz/)
-*iso
+* iso
 * [lzh](/fr/compression/lzh/)
 * lha
 * [lzma](/fr/compression/lzma/)
-* [tr/min](/fr/compression/tr/min/)
+* [rpm](/fr/compression/rpm/)
 * [tar](/fr/compression/tar/)
 * [xar](/fr/compression/xar/)
 * [z](/fr/compression/z/)
