--- a/he/compression/b1.he.md
+++ b/he/compression/b1.he.md
@@ -26,21 +26,21 @@
 
 B1 Free Archiver תומך בפורמטים הבאים של קבצים.
 
-*ב1
+* b1
 * [zip](/he/compression/zip/)
 * [jar](/he/programming/jar/)
-*xpi
+* xpi
 * [rar](/he/compression/rar/)
 * [7z](/he/compression/7z/)
 * [arj](/he/compression/arj/)
 * [bz2](/he/compression/bz2/)
-* מונית
+* cab
 * [deb](/he/compression/deb/)
 * [gzip](/he/compression/gzip/)
 * [tgz](/he/compression/tgz/)
-*איזו
+* iso
 * [lzh](/he/compression/lzh/)
-*להא
+* lha
 * [lzma](/he/compression/lzma/)
 * [rpm](/he/compression/rpm/)
 * [tar](/he/compression/tar/)
