--- a/hu/compression/b1.hu.md
+++ b/hu/compression/b1.hu.md
@@ -34,15 +34,15 @@ A B1 Free Archiver a következő fájlformátumokat támogatja.
 * [7z](/hu/compression/7z/)
 * [arj](/hu/compression/arj/)
 * [bz2](/hu/compression/bz2/)
-* taxi
+* cab
 * [deb](/hu/compression/deb/)
 * [gzip](/hu/compression/gzip/)
 * [tgz](/hu/compression/tgz/)
-*iso
+* iso
 * [lzh](/hu/compression/lzh/)
 * lha
 * [lzma](/hu/compression/lzma/)
-* [tr/min](/hu/compression/hu/min/)
+* [rpm](/hu/compression/rpm/)
 * [tar](/hu/compression/tar/)
 * [xar](/hu/compression/xar/)
 * [z](/hu/compression/z/)
