--- a/id/compression/b1.id.md
+++ b/id/compression/b1.id.md
@@ -34,15 +34,15 @@ B1 Free Archiver mendukung format file berikut.
 * [7z](/id/compression/7z/)
 * [arj](/id/compression/arj/)
 * [bz2](/id/compression/bz2/)
-* taxi
+* cab
 * [deb](/id/compression/deb/)
 * [gzip](/id/compression/gzip/)
 * [tgz](/id/compression/tgz/)
-*iso
+* iso
 * [lzh](/id/compression/lzh/)
 * lha
 * [lzma](/id/compression/lzma/)
-* [tr/min](/id/compression/tr/min/)
+* [rpm](/id/compression/rpm/)
 * [tar](/id/compression/tar/)
 * [xar](/id/compression/xar/)
 * [z](/id/compression/z/)
