--- a/it/compression/b1.it.md
+++ b/it/compression/b1.it.md
@@ -34,15 +34,15 @@ B1 Free Archiver supporta i seguenti formati di file.
 * [7z](/it/compression/7z/)
 * [arj](/it/compression/arj/)
 * [bz2](/it/compression/bz2/)
-* taxi
+* cab
 * [deb](/it/compression/deb/)
 * [gzip](/it/compression/gzip/)
 * [tgz](/it/compression/tgz/)
-*iso
+* iso
 * [lzh](/it/compression/lzh/)
 * lha
 * [lzma](/it/compression/lzma/)
-* [tr/min](/it/compression/tr/min/)
+* [rpm](/it/compression/rpm/)
 * [tar](/it/compression/tar/)
 * [xar](/it/compression/xar/)
 * [z](/it/compression/z/)
