--- a/ko/compression/b1.ko.md
+++ b/ko/compression/b1.ko.md
@@ -34,15 +34,15 @@ B1 Free Archiver는 다음 파일 형식을 지원합니다.
 * [7z](/ko/compression/7z/)
 * [arj](/ko/compression/arj/)
 * [bz2](/ko/compression/bz2/)
-* taxi
+* cab
 * [deb](/ko/compression/deb/)
 * [gzip](/ko/compression/gzip/)
 * [tgz](/ko/compression/tgz/)
-*iso
+* iso
 * [lzh](/ko/compression/lzh/)
 * lha
 * [lzma](/ko/compression/lzma/)
-* [tr/min](/ko/compression/tr/min/)
+* [rpm](/ko/compression/rpm/)
 * [tar](/ko/compression/tar/)
 * [xar](/ko/compression/xar/)
 * [z](/ko/compression/z/)
