--- a/nl/compression/b1.nl.md
+++ b/nl/compression/b1.nl.md
@@ -34,15 +34,15 @@ B1 Free Archiver ondersteunt de volgende bestandsindelingen.
 * [7z](/nl/compression/7z/)
 * [arj](/nl/compression/arj/)
 * [bz2](/nl/compression/bz2/)
-* taxi
+* cab
 * [deb](/nl/compression/deb/)
 * [gzip](/nl/compression/gzip/)
 * [tgz](/nl/compression/tgz/)
-*iso
+* iso
 * [lzh](/nl/compression/lzh/)
 * lha
 * [lzma](/nl/compression/lzma/)
-* [tr/min](/nl/compression/tr/min/)
+* [rpm](/nl/compression/rpm/)
 * [tar](/nl/compression/tar/)
 * [xar](/nl/compression/xar/)
 * [z](/nl/compression/z/)
