--- a/pl/compression/b1.pl.md
+++ b/pl/compression/b1.pl.md
@@ -34,15 +34,15 @@ B1 Free Archiver obsługuje następujące formaty plików.
 * [7z](/pl/compression/7z/)
 * [arj](/pl/compression/arj/)
 * [bz2](/pl/compression/bz2/)
-* taxi
+* cab
 * [deb](/pl/compression/deb/)
 * [gzip](/pl/compression/gzip/)
 * [tgz](/pl/compression/tgz/)
-*iso
+* iso
 * [lzh](/pl/compression/lzh/)
 * lha
 * [lzma](/pl/compression/lzma/)
-* [tr/min](/pl/compression/tr/min/)
+* [rpm](/pl/compression/rpm/)
 * [tar](/pl/compression/tar/)
 * [xar](/pl/compression/xar/)
 * [z](/pl/compression/z/)
