--- a/pt/compression/b1.pt.md
+++ b/pt/compression/b1.pt.md
@@ -34,15 +34,15 @@ B1 Free Archiver suporta os seguintes formatos de arquivo.
 * [7z](/pt/compression/7z/)
 * [arj](/pt/compression/arj/)
 * [bz2](/pt/compression/bz2/)
-* taxi
+* cab
 * [deb](/pt/compression/deb/)
 * [gzip](/pt/compression/gzip/)
 * [tgz](/pt/compression/tgz/)
-*iso
+* iso
 * [lzh](/pt/compression/lzh/)
 * lha
 * [lzma](/pt/compression/lzma/)
-* [tr/min](/pt/compression/tr/min/)
+* [rpm](/pt/compression/rpm/)
 * [tar](/pt/compression/tar/)
 * [xar](/pt/compression/xar/)
 * [z](/pt/compression/z/)
