--- a/ro/compression/b1.ro.md
+++ b/ro/compression/b1.ro.md
@@ -34,15 +34,15 @@ B1 Free Archiver acceptă următoarele formate de fișiere.
 * [7z](/ro/compression/7z/)
 * [arj](/ro/compression/arj/)
 * [bz2](/ro/compression/bz2/)
-* taxi
+* cab
 * [deb](/ro/compression/deb/)
 * [gzip](/ro/compression/gzip/)
 * [tgz](/ro/compression/tgz/)
-*iso
+* iso
 * [lzh](/ro/compression/lzh/)
 * lha
 * [lzma](/ro/compression/lzma/)
-* [tr/min](/ro/compression/tr/min/)
+* [rpm](/ro/compression/rpm/)
 * [tar](/ro/compression/tar/)
 * [xar](/ro/compression/xar/)
 * [z](/ro/compression/z/)
