--- a/ru/compression/b1.ru.md
+++ b/ru/compression/b1.ru.md
@@ -34,15 +34,15 @@ B1 Free Archiver поддерживает следующие форматы фа
 * [7z](/ru/compression/7z/)
 * [arj](/ru/compression/arj/)
 * [bz2](/ru/compression/bz2/)
-* taxi
+* cab
 * [deb](/ru/compression/deb/)
 * [gzip](/ru/compression/gzip/)
 * [tgz](/ru/compression/tgz/)
-*iso
+* iso
 * [lzh](/ru/compression/lzh/)
 * lha
 * [lzma](/ru/compression/lzma/)
-* [tr/min](/ru/compression/tr/min/)
+* [rpm](/ru/compression/rpm/)
 * [tar](/ru/compression/tar/)
 * [xar](/ru/compression/xar/)
 * [z](/ru/compression/z/)
