--- a/sv/compression/b1.sv.md
+++ b/sv/compression/b1.sv.md
@@ -34,15 +34,15 @@ B1 Free Archiver stöder följande filformat.
 * [7z](/sv/compression/7z/)
 * [arj](/sv/compression/arj/)
 * [bz2](/sv/compression/bz2/)
-* taxi
+* cab
 * [deb](/sv/compression/deb/)
 * [gzip](/sv/compression/gzip/)
 * [tgz](/sv/compression/tgz/)
-*iso
+* iso
 * [lzh](/sv/compression/lzh/)
 * lha
 * [lzma](/sv/compression/lzma/)
-* [tr/min](/sv/compression/tr/min/)
+* [rpm](/sv/compression/rpm/)
 * [tar](/sv/compression/tar/)
 * [xar](/sv/compression/xar/)
 * [z](/sv/compression/z/)
