--- a/th/compression/b1.th.md
+++ b/th/compression/b1.th.md
@@ -34,15 +34,15 @@ B1 Free Archiver รองรับรูปแบบไฟล์ต่อไป
 * [7z](/th/compression/7z/)
 * [arj](/th/compression/arj/)
 * [bz2](/th/compression/bz2/)
-* taxi
+* cab
 * [deb](/th/compression/deb/)
 * [gzip](/th/compression/gzip/)
 * [tgz](/th/compression/tgz/)
-*iso
+* iso
 * [lzh](/th/compression/lzh/)
 * lha
 * [lzma](/th/compression/lzma/)
-* [tr/min](/th/compression/tr/min/)
+* [rpm](/th/compression/rpm/)
 * [tar](/th/compression/tar/)
 * [xar](/th/compression/xar/)
 * [z](/th/compression/z/)
