--- a/tr/compression/b1.tr.md
+++ b/tr/compression/b1.tr.md
@@ -34,15 +34,15 @@ B1 Ücretsiz Arşivleyici aşağıdaki dosya biçimlerini destekler.
 * [7z](/tr/compression/7z/)
 * [arj](/tr/compression/arj/)
 * [bz2](/tr/compression/bz2/)
-* taxi
+* cab
 * [deb](/tr/compression/deb/)
 * [gzip](/tr/compression/gzip/)
 * [tgz](/tr/compression/tgz/)
-*iso
+* iso
 * [lzh](/tr/compression/lzh/)
 * lha
 * [lzma](/tr/compression/lzma/)
-* [tr/min](/tr/compression/tr/min/)
+* [rpm](/tr/compression/rpm/)
 * [tar](/tr/compression/tar/)
 * [xar](/tr/compression/xar/)
 * [z](/tr/compression/z/)
