--- a/uk/compression/b1.uk.md
+++ b/uk/compression/b1.uk.md
@@ -34,15 +34,15 @@ B1 Free Archiver підтримує такі формати файлів.
 * [7z](/uk/compression/7z/)
 * [arj](/uk/compression/arj/)
 * [bz2](/uk/compression/bz2/)
-* taxi
+* cab
 * [deb](/uk/compression/deb/)
 * [gzip](/uk/compression/gzip/)
 * [tgz](/uk/compression/tgz/)
-*iso
+* iso
 * [lzh](/uk/compression/lzh/)
 * lha
 * [lzma](/uk/compression/lzma/)
-* [tr/min](/uk/compression/uk/min/)
+* [rpm](/uk/compression/rpm/)
 * [tar](/uk/compression/tar/)
 * [xar](/uk/compression/xar/)
 * [z](/uk/compression/z/)
