--- a/vi/compression/b1.vi.md
+++ b/vi/compression/b1.vi.md
@@ -34,15 +34,15 @@ B1 Free Archiver hỗ trợ các định dạng tệp sau.
 * [7z](/vi/compression/7z/)
 * [arj](/vi/compression/arj/)
 * [bz2](/vi/compression/bz2/)
-* taxi
+* cab
 * [deb](/vi/compression/deb/)
 * [gzip](/vi/compression/gzip/)
 * [tgz](/vi/compression/tgz/)
-*iso
+* iso
 * [lzh](/vi/compression/lzh/)
 * lha
 * [lzma](/vi/compression/lzma/)
-* [tr/min](/vi/compression/vi/min/)
+* [rpm](/vi/compression/rpm/)
 * [tar](/vi/compression/tar/)
 * [xar](/vi/compression/xar/)
 * [z](/vi/compression/z/)
