--- a/zh/compression/b1.zh.md
+++ b/zh/compression/b1.zh.md
@@ -34,15 +34,15 @@ B1 Free Archiver 支持以下文件格式。
 * [7z](/zh/compression/7z/)
 * [arj](/zh/compression/arj/)
 * [bz2](/zh/compression/bz2/)
-* taxi
+* cab
 * [deb](/zh/compression/deb/)
 * [gzip](/zh/compression/gzip/)
 * [tgz](/zh/compression/tgz/)
-*iso
+* iso
 * [lzh](/zh/compression/lzh/)
 * lha
 * [lzma](/zh/compression/lzma/)
-* [tr/min](/zh/compression/zh/min/)
+* [rpm](/zh/compression/rpm/)
 * [tar](/zh/compression/tar/)
 * [xar](/zh/compression/xar/)
 * [z](/zh/compression/z/)
