--- a/pl/misc/h4.pl.md
+++ b/pl/misc/h4.pl.md
@@ -39,7 +39,7 @@ Plik HDF4 lub H4 jest jak kontener składający się z heterogenicznych obiektó
 * Tabele
 * Elementy tekstowe
 * Wykresy
-* Dokumenty takie jak [PDF](/pl/pdf/) i [dokumenty programu Excel](/pl/arkusz kalkulacyjny/)
+* Dokumenty takie jak [PDF](/pl/pdf/) i [dokumenty programu Excel](/pl/spreadsheet/)
 
 ## Przeglądarka plików H4
 
