--- a/pl/misc/h5.pl.md
+++ b/pl/misc/h5.pl.md
@@ -33,7 +33,7 @@ Pliki H5 są powszechnie używane w lotnictwie, fizyce, inżynierii, finansach, 
 
 ### Model danych HDF5
 
-Plik HDF5 jest jak kontener składający się z heterogenicznych obiektów danych. Tymi zestawami danych mogą być na przykład obrazy, tabele, elementy tekstowe, wykresy, a nawet dokumenty, takie jak [PDF](/pl/pdf/) i [dokumenty programu Excel](/pl/arkusz kalkulacyjny/).
+Plik HDF5 jest jak kontener składający się z heterogenicznych obiektów danych. Tymi zestawami danych mogą być na przykład obrazy, tabele, elementy tekstowe, wykresy, a nawet dokumenty, takie jak [PDF](/pl/pdf/) i [dokumenty programu Excel](/pl/spreadsheet/).
 
 ## Przeglądarka plików H5
 
