--- a/de/compression/b1.de.md
+++ b/de/compression/b1.de.md
@@ -34,15 +34,15 @@ B1 Free Archiver unterstützt die folgenden Dateiformate.
 * [7z](/de/compression/7z/)
 * [arj](/de/compression/arj/)
 * [bz2](/de/compression/bz2/)
-* taxi
+* cab
 * [deb](/de/compression/deb/)
 * [gzip](/de/compression/gzip/)
 * [tgz](/de/compression/tgz/)
-*iso
+* iso
 * [lzh](/de/compression/lzh/)
 * lha
 * [lzma](/de/compression/lzma/)
-* [tr/min](/de/compression/tr/min/)
+* [rpm](/de/compression/rpm/)
 * [tar](/de/compression/tar/)
 * [xar](/de/compression/xar/)
 * [z](/de/compression/z/)
