--- a/hi/misc/h4.hi.md
+++ b/hi/misc/h4.hi.md
@@ -39,7 +39,7 @@ HDF4 या H4 फ़ाइल एक कंटेनर की तरह है
 * टेबल्स
 * पाठ तत्व
 * रेखांकन
-* दस्तावेज़ जैसे [PDF](/hi/pdf/) और [Excel दस्तावेज़](/hi/स्प्रेडशीट/)
+* दस्तावेज़ जैसे [PDF](/hi/pdf/) और [Excel दस्तावेज़](/hi/spreadsheet/)
 
 ## H4 फ़ाइल व्यूअर
 
