--- a/hi/misc/h5.hi.md
+++ b/hi/misc/h5.hi.md
@@ -33,7 +33,7 @@ H5 फाइलें आमतौर पर एयरोस्पेस, भौ
 
 ### HDF5 डेटा मॉडल
 
-HDF5 फ़ाइल एक कंटेनर की तरह है जिसमें विषम डेटा ऑब्जेक्ट शामिल हैं। उदाहरण के लिए, ये डेटासेट इमेज, टेबल, टेक्स्ट एलिमेंट, ग्राफ़ और [PDF](/hi/pdf/) और [Excel दस्तावेज़](/hi/स्प्रेडशीट/) जैसे दस्तावेज़ भी हो सकते हैं।
+HDF5 फ़ाइल एक कंटेनर की तरह है जिसमें विषम डेटा ऑब्जेक्ट शामिल हैं। उदाहरण के लिए, ये डेटासेट इमेज, टेबल, टेक्स्ट एलिमेंट, ग्राफ़ और [PDF](/hi/pdf/) और [Excel दस्तावेज़](/hi/spreadsheet/) जैसे दस्तावेज़ भी हो सकते हैं।
 
 ## H5 फ़ाइल व्यूअर
 
