--- a/hi/spreadsheet/12m.hi.md
+++ b/hi/spreadsheet/12m.hi.md
@@ -18,7 +18,7 @@
 
 ## लोटस 12M फ़ाइल क्या है?
 
-12M फ़ाइल एक लोटस 1-2-3 स्प्रेडशीट फ़ाइल है जिसमें पूर्व-डिज़ाइन किए गए स्प्रेडशीट प्रारूप होते हैं। यह लोटस डेवलपमेंट कॉरपोरेशन द्वारा विकसित किया गया था और आईबीएम लोटस स्मार्टसुइट का हिस्सा था। 12M फ़ाइल में पूर्व-निर्धारित स्प्रेडशीट का उपयोग डेटा के संग्रह के लिए किया जा सकता है जिसका उपयोग विभिन्न प्रकार की डेटा फ़ाइलों जैसे वित्तीय विवरण, बजट और पूर्वानुमान बनाने के लिए किया जाता है। किसी भी अन्य स्प्रैडशीट की तरह, 12M फ़ाइल स्वरूप सूत्र, स्वरूपण और प्रिंट श्रेणी का समर्थन करता है। [लोटस 123](/hi/स्प्रेडशीट/123/) एक अन्य लोकप्रिय लोटस स्प्रेडशीट फ़ाइल प्रारूप है।
+12M फ़ाइल एक लोटस 1-2-3 स्प्रेडशीट फ़ाइल है जिसमें पूर्व-डिज़ाइन किए गए स्प्रेडशीट प्रारूप होते हैं। यह लोटस डेवलपमेंट कॉरपोरेशन द्वारा विकसित किया गया था और आईबीएम लोटस स्मार्टसुइट का हिस्सा था। 12M फ़ाइल में पूर्व-निर्धारित स्प्रेडशीट का उपयोग डेटा के संग्रह के लिए किया जा सकता है जिसका उपयोग विभिन्न प्रकार की डेटा फ़ाइलों जैसे वित्तीय विवरण, बजट और पूर्वानुमान बनाने के लिए किया जाता है। किसी भी अन्य स्प्रैडशीट की तरह, 12M फ़ाइल स्वरूप सूत्र, स्वरूपण और प्रिंट श्रेणी का समर्थन करता है। [लोटस 123](/hi/spreadsheet/123/) एक अन्य लोकप्रिय लोटस स्प्रेडशीट फ़ाइल प्रारूप है।
 
 ## लोटस 12M फ़ाइल स्वरूप - अधिक जानकारी
 
