--- a/hu/misc/h5.hu.md
+++ b/hu/misc/h5.hu.md
@@ -33,7 +33,7 @@ A H5 fájlokat általánosan használják a repülés, a fizika, a mérnöki, a 
 
 ### HDF5 adatmodell
 
-A HDF5 fájl olyan, mint egy tároló, amely heterogén adatobjektumokat tartalmaz. Ezek az adatkészletek lehetnek például képek, táblázatok, szöveges elemek, grafikonok, sőt dokumentumok, például [PDF](/hu/pdf/) és [Excel-dokumentumok](/hu/táblázat/).
+A HDF5 fájl olyan, mint egy tároló, amely heterogén adatobjektumokat tartalmaz. Ezek az adatkészletek lehetnek például képek, táblázatok, szöveges elemek, grafikonok, sőt dokumentumok, például [PDF](/hu/pdf/) és [Excel-dokumentumok](/hu/spreadsheet/).
 
 ## H5 fájlnézegető
 
