--- a/pt/misc/h4.pt.md
+++ b/pt/misc/h4.pt.md
@@ -39,7 +39,7 @@ O arquivo HDF4 ou H4 é como um contêiner que consiste em objetos de dados hete
 * Tabelas
 * Elementos de texto
 * Gráficos
-* Documentos como [PDF](/pt/pdf/) e [documentos do Excel](/pt/planilha/)
+* Documentos como [PDF](/pt/pdf/) e [documentos do Excel](/pt/spreadsheet/)
 
 ## Visualizador de arquivos H4
 
