--- a/pt/misc/h5.pt.md
+++ b/pt/misc/h5.pt.md
@@ -33,7 +33,7 @@ Os arquivos H5 são comumente usados em aeroespacial, física, engenharia, finan
 
 ### Modelo de dados HDF5
 
-O arquivo HDF5 é como um contêiner composto por objetos de dados heterogêneos. Por exemplo, esses conjuntos de dados podem ser imagens, tabelas, elementos de texto, gráficos e até mesmo documentos como [PDF](/pt/pdf/) e [documentos do Excel](/pt/planilha/).
+O arquivo HDF5 é como um contêiner composto por objetos de dados heterogêneos. Por exemplo, esses conjuntos de dados podem ser imagens, tabelas, elementos de texto, gráficos e até mesmo documentos como [PDF](/pt/pdf/) e [documentos do Excel](/pt/spreadsheet/).
 
 ## Visualizador de arquivos H5
 
